--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
   <main>
     <div class="flex-card-arrow">
-      <div class="card-arrow-box"><img src="img/мой запрос.png" alt="card"></div>
+      <div class="card-arrow-box"><img src="img/card.png" alt="card"></div>
       <div class="card-arrow-box"><a href="#" class="arrow-btn"><img src="img/arrow.png" alt="arrow"></a></div>
     </div>
     <div class="sidebar-block-1">
