--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <div class="place-box">
         <div class="op"></div>
         <h3>Детские сады и школы, больницы</h3>
-        <div class="img-box"><img src="img/hall.png" alt="hall"><img src="img/hall.png" alt="hall"></div>
+        <div class="img-box"><img src="img/hall.svg" alt="hall"><img src="img/hall.svg" alt="hall"></div>
         <div class="place-info">
           <div id="tabs">
             <div class="tab whiteborder gray">Сад №12</div>
@@ -294,8 +294,6 @@
           </div>
         </div>
       </div>
-
-    </div>
     <!-- <div class="place-box">Блок 2</div>
         <div class="place-box">Блок 3</div>
         <div class="place-box">Блок 4</div>
