--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="header-flex-cont">
-      <div class="header-flex-box"><a href="#"><img src="img/logo.png" alt="logo"></a></div>
+      <div class="header-flex-box"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
       <div class="header-flex-box">
         <h1><a href="#">Fructu</a></h1>
         <p>АНАЛИЗИРУЮ НЕДВИЖИМОСТЬ</p>
@@ -23,9 +23,10 @@
       <div class="header-flex-box">
         <form>
           <!-- <form action="/action_page.php">--><input type="text" placeholder="Search shots..." name="search"><button
-            type="submit"><i class="fa fa-search"></i></button></form>
+            type="submit"><i class="fa fa-search"></i></button>
+        </form>
       </div>
-      <div class="header-flex-box"><img src="img/call icon.png" alt="tel"></div>
+      <div class="header-flex-box"><img src="img/call icon.svg" alt="tel"></div>
       <div class="header-flex-box">
         <p><a href="tel:+735225-25-25">Заказать обратный звонок</a></p><a href="tel:+735225-25-25">+7(352)-25-25-25</a>
       </div>
@@ -47,8 +48,8 @@
   </header>
   <main>
     <div class="flex-card-arrow">
-      <div class="card-arrow-box"><img src="img/card.png" alt="card"></div>
-      <div class="card-arrow-box"><a href="#" class="arrow-btn"><img src="img/arrow.png" alt="arrow"></a></div>
+      <div class="card-arrow-box"><img src="img/card.svg" alt="card"></div>
+      <div class="card-arrow-box"><a href="#" class="arrow-btn"><img src="img/arrow.svg" alt="arrow"></a></div>
     </div>
     <div class="sidebar-block-1">
       <div class="slider">
@@ -65,7 +66,7 @@
           <div class="sl-price">
             <p>19800000 ₽</p>
           </div>
-          <div class="sl-metro"><img src="img/metro-1.png" alt="metro">
+          <div class="sl-metro"><img src="img/blue-metro.svg" alt="metro">
             <p>Киевская</p>
           </div>
         </div>
@@ -92,7 +93,7 @@
                 <p>парковка в доме</p>
               </div>
             </div>
-            <div class="sl-metro"><img src="img/metro-1.png" alt="metro">
+            <div class="sl-metro"><img src="img/blue-metro.svg" alt="metro">
               <p class="metro-adr">Киевская <span>5 мин.пешком</span></p>
               <p class="adress">Киевская площадь 19,
                 корп 1</p>
@@ -123,7 +124,7 @@
           <div class="sl-price-2">
             <p>39400000 ₽</p>
           </div>
-          <div class="sl-metro-2"><img src="img/metro-2.png" alt="metro">
+          <div class="sl-metro-2"><img src="img/pink-metro.svg" alt="metro">
             <p>ЗИЛ</p>
           </div>
         </div>
@@ -150,7 +151,7 @@
                 <p>бассейн в доме</p>
               </div>
             </div>
-            <div class="sl-metro-2"><img src="img/metro-2.png" alt="metro">
+            <div class="sl-metro-2"><img src="img/pink-metro.svg" alt="metro">
               <p class="metro-adr-2">ЗИЛ <span>8 мин.пешком</span></p>
               <p class="adress-2">Серпуховская 19,
                 корп 5</p>
@@ -181,7 +182,7 @@
           <div class="sl-price-3">
             <p>14000000 ₽</p>
           </div>
-          <div class="sl-metro-3"><img src="img/metro-2.png" alt="metro">
+          <div class="sl-metro-3"><img src="img/pink-metro.svg" alt="metro">
             <p>ЗИЛ</p>
           </div>
         </div>
@@ -208,7 +209,7 @@
                 <p>спорт-зал в доме</p>
               </div>
             </div>
-            <div class="sl-metro-3"><img src="img/metro-2.png" alt="metro">
+            <div class="sl-metro-3"><img src="img/pink-metro.svg" alt="metro">
               <p class="metro-adr-3">ЗИЛ <span>15 мин.пешком</span></p>
               <p class="adress-3">Серпуховский вал 28,
                 корп 1</p>
@@ -229,7 +230,7 @@
         <p>Двухкомнатная квартира,
           51 м,
           4/5 этаж</p>
-        <p class="g-metro"><img src="img/metro-1.png" alt="metro">Киевская <span>3 мин.пешком</span></p>
+        <p class="g-metro"><img src="img/blue-metro.svg" alt="metro">Киевская <span>3 мин.пешком</span></p>
       </div>
       <div class="b-b-img"><img src="img/flat-6.png" alt="flat"></div>
       <div class="s-b-img"><img src="img/flat-5.png" alt="flat"><img src="img/flat-2.png" alt="flat"><img
@@ -237,7 +238,7 @@
       <div class="b-price">
         <div>19800000 ₽</div>
         <div>388235 ₽/м2</div>
-        <div><a href=""> <i class="fa fa-heart" aria-hidden="true"></i></a></div>
+        <div><a href=""><i class="fa fa-heart" aria-hidden="true"></i></a></div>
       </div>
       <div class="b-list">
         <ul>
@@ -245,7 +246,8 @@
               48</strong></li>
           <li>Окна кухни выходят на сторону рассвета,
             а окна из гостинной на сторону заката.</li>
-          <li><a href="#">Более подробное описание...</a><i class="fa fa-angle-double-down" aria-hidden="true"></i></li>
+          <li><a href="#">Более подробное описание...</a><i class="fa fa-angle-double-down" aria-hidden="true"></i>
+          </li>
         </ul>
       </div>
     </div>
@@ -258,91 +260,255 @@
       </div>
     </div>
     <div class="place-cont">
-      <div class="place-box">
+      <div class="road"><img src="img/дорога.svg" alt="road"></div>
+      <div class="place-box clearfix">
         <div class="op"></div>
-        <h3>Детские сады и школы, больницы</h3>
+        <h3>Детские сады и школы,
+          больницы</h3>
         <div class="img-box"><img src="img/hall.svg" alt="hall"><img src="img/hall.svg" alt="hall"></div>
         <div class="place-info">
-          <div id="tabs">
-            <div class="tab whiteborder gray">Сад №12</div>
-            <div class="tab gray">Василек</div>
-            <div class="tab gray">ИП Слухова</div>
-            <div class="tabContent">
-              <div class="text-1"><img src="img/иконка_меню_1.png" alt="menu">
-                <p>Бесплатный набор, осуществляется с 1
-                  апреля,
-                  Возраст детей: с 1-7 лет,
-                  Вместимость: 3 группы по 10 чел.
-                  Доп. образование: англ, математика, рисование</p>
+          <div class="tabs">
+            <ul class="tabs__caption">
+              <li class="active">
+                <div>Сад №12</div>
+              </li>
+              <li>
+                <div>Василек</div>
+              </li>
+              <li>
+                <div>ИП Слухова</div>
+              </li>
+            </ul>
+            <div class="tabs__content active">
+              <div class="text-1"><i class="fa fa-bars" aria-hidden="true"></i>
+                <p>Бесплатный набор,
+                  осуществляется с 1 апреля,
+                  <br>Возраст детей: с 1-7 лет,
+                  <br>Вместимость: 3 группы по 10 чел. <br>Доп. образование: англ,
+                  математика,
+                  рисование</p>
               </div>
-              <div class="text-2"><img src="img/Иконка_режим работы.png" alt="clock">
+              <div class="text-2"><i class="fa fa-clock-o" aria-hidden="true"></i>
                 <p>Режим работы с 8:00-21:00</p>
               </div>
-              <div class="text-3"><img src="img/поиск-иконка.png" alt="location">
+              <div class="text-3"><i class="fa fa-map-marker" aria-hidden="true"></i>
                 <p>Пешком: <span>15 минут</span></p>
                 <p>Общ.транспорт: <span>10 минут</span></p>
                 <p>Автомобиль: <span>10 минут</span></p>
               </div>
-              <div class="more-photo">
-                <img src="img/фото_сад.jpg" alt="child">
-                <a href="#">Смотреть на карте</a>
-                <img src="img/больше_лупа.png" alt="lupa">
-              </div>
+              <div class="more-photo"><img src="img/фото_сад.jpg" alt="child"><a href="#">Смотреть на карте</a><img
+                  src="img/больше_лупа.png" alt="lupa"></div>
             </div>
-            <div class="tabContent">о! тут может быть контент </div>
-            <div class="tabContent">и даже тут)</div>
+            <div class="tabs__content">о ! тут может быть контент </div>
+            <div class="tabs__content">и даже тут)</div>
           </div>
         </div>
       </div>
-    <!-- <div class="place-box">Блок 2</div>
-        <div class="place-box">Блок 3</div>
-        <div class="place-box">Блок 4</div>
-        <div class="place-box">Блок 5</div> -->
+      <div class="place-box clearfix">
+        <div class="op-1"></div>
+        <h3>Парки,
+          скверы и набережные</h3>
+        <div class="img-box-1"><img src="img/park.svg" alt="park"><img src="img/park.svg" alt="park"></div>
+        <div class="place-info">
+          <div class="tabs">
+            <ul class="tabs__caption">
+              <li class="active">
+                <div>Сокольники</div>
+              </li>
+              <li>
+                <div>Сокольники наб.</div>
+              </li>
+              <li>
+                <div>Лосиный пруд</div>
+              </li>
+            </ul>
+            <div class="tabs__content active">
+              <div class="text-1"><i class="fa fa-bars" aria-hidden="true"></i>
+                <p>Площадь 70 га,
+                  лес,
+                  тропинки,
+                  детские площадки 2,
+                  танцевальная площадка,
+                  открытый бассейн (платный,
+                  сайт бассейна),
+                  кофеточки (30шт),
+                  кафе (10шт),
+                  ресторан (3шт),
+                  Аренда инвентаря (2шт),
+                  аренда велосипедов,
+                  колясок,
+                  самокатов,
+                  парковка (бесплатная +2 платные)</p>
+              </div>
+              <div class="text-2"><i class="fa fa-clock-o" aria-hidden="true"></i>
+                <p>Режим работы с 6:00-23:00</p>
+              </div>
+              <div class="text-3"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p>Пешком: <span>5 минут</span></p>
+                <p>Общ.транспорт: <span>нет</span></p>
+                <p>Автомобиль: <span>10 минут</span></p>
+              </div>
+              <div class="more-photo"><img src="img/фото_парк.png" alt="park"><a href="#">Смотреть на карте</a><img
+                  src="img/больше_лупа.png" alt="lupa"></div>
+            </div>
+            <div class="tabs__content">о ! тут может быть контент </div>
+            <div class="tabs__content">и даже тут)</div>
+          </div>
+        </div>
+      </div>
+      <div class="place-box clearfix">
+        <div class="op-2"></div>
+        <h3>Общественный транспорт, парковки</h3>
+        <div class="img-box-2"><img src="img/icons_bus.svg" alt="bus"><img src="img/icons_p.svg" alt="parking"></div>
+        <div class="place-info">
+          <div class="tabs">
+            <ul class="tabs__caption">
+              <li class="active">
+                <div>Метро</div>
+              </li>
+              <li>
+                <div>Автобусы</div>
+              </li>
+              <li>
+                <div>Трамваи</div>
+              </li>
+              <li>
+                <div>Парковка</div>
+              </li>
+            </ul>
+            <div class="tabs__content active">
+              <div class="text-1"><i class="fa fa-bars" aria-hidden="true"></i>
+                <p>Станция метро Сокольники. <br> Год постройки
+                  <br>
+                  В шаговой доступности:
+                  <br> Соколиная гора (10 мин),<br> Воробьевая гора (строится)</p>
+              </div>
+              <div class="text-2"><i class="fa fa-clock-o" aria-hidden="true"></i>
+                <p>Режим работы с 5:00-01:00</p>
+              </div>
+              <div class="text-3"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p>Пешком: <span>5 минут</span></p>
+                <p>Общ.транспорт: <span>нет</span></p>
+                <p>Автомобиль: <span>10 минут</span></p>
+              </div>
+              <div class="more-photo"><img src="img/фото_транспорт.png" alt="park"><a href="#">Смотреть на карте</a><img
+                  src="img/больше_лупа.png" alt="lupa"></div>
+            </div>
+            <div class="tabs__content">о ! тут может быть контент </div>
+            <div class="tabs__content">и даже тут)</div>
+            <div class="tabs__content">и сюда даже жмякнули</div>
+          </div>
+        </div>
+      </div>
+      <div class="place-box clearfix">
+        <div class="op-3"></div>
+        <h3>Магазины и аптеки</h3>
+        <div class="img-box-3"><img src="img/groceries.svg" alt="fruit"><img src="img/grocery.svg" alt="fruit"></div>
+        <div class="place-info">
+          <div class="tabs">
+            <ul class="tabs__caption">
+              <li class="active">
+                <div>Ашан</div>
+              </li>
+              <li>
+                <div>Магнолия</div>
+              </li>
+              <li>
+                <div>Перекресток</div>
+              </li>
+              <li>
+                <div>Другие</div>
+              </li>
+            </ul>
+            <div class="tabs__content active">
+              <div class="text-1"><i class="fa fa-bars" aria-hidden="true"></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis soluta minus voluptas enim
+                  adipisci laborum animi magni similique porro voluptate, ad fuga dolore unde, corrupti quisquam! Vel
+                  sapiente sequi sit aliquid doloremque voluptate saepe accusamus. </p>
+              </div>
+              <div class="text-2"><i class="fa fa-clock-o" aria-hidden="true"></i>
+                <p>Режим работы с 5:00-01:00</p>
+              </div>
+              <div class="text-3"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p>Пешком: <span>5 минут</span></p>
+                <p>Общ.транспорт: <span>нет</span></p>
+                <p>Автомобиль: <span>10 минут</span></p>
+              </div>
+              <div class="more-photo"><img src="img/фото_магазин.png" alt="park"><a href="#">Смотреть на карте</a><img
+                  src="img/больше_лупа.png" alt="lupa"></div>
+            </div>
+            <div class="tabs__content">о ! тут может быть контент </div>
+            <div class="tabs__content">и даже тут)</div>
+            <div class="tabs__content">и сюда даже жмякнули</div>
+          </div>
+        </div>
+      </div>
+      <div class="place-box clearfix">
+        <div class="op-4"></div>
+        <h3>Бьютификация</h3>
+        <div class="img-box-4"><img src="img/hair 1.svg" alt="hair"><img src="img/barber-pole 1.svg" alt="barber"></div>
+        <div class="place-info">
+          <div class="tabs">
+            <ul class="tabs__caption">
+              <li class="active">
+                <div>Салоны красоты</div>
+              </li>
+              <li>
+                <div>Маникюрные</div>
+              </li>
+              <li>
+                <div>Косметология</div>
+              </li>
+              <li>
+                <div>Спа</div>
+              </li>
+              <li>
+                <div>Семейные</div>
+              </li>
+              <li>
+                <div>Мужские</div>
+              </li>
+              <li>
+                <div>Женские</div>
+              </li>
+              <li>
+                <div>Детские</div>
+              </li>
+              <li>
+                <div>Ещё</div>
+              </li>
+            </ul>
+            <div class="tabs__content active">
+              <div class="text-1"><i class="fa fa-bars" aria-hidden="true"></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis soluta minus voluptas enim
+                  adipisci laborum animi magni similique porro voluptate, ad. </p>
+              </div>
+              <div class="text-2"><i class="fa fa-clock-o" aria-hidden="true"></i>
+                <p>Режим работы с 5:00-01:00</p>
+              </div>
+              <div class="text-3"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p>Пешком: <span>5 минут</span></p>
+                <p>Общ.транспорт: <span>нет</span></p>
+                <p>Автомобиль: <span>10 минут</span></p>
+              </div>
+              <div class="more-photo"><img src="img/фото_бьюти.png" alt="park"><a href="#">Смотреть на карте</a><img
+                  src="img/больше_лупа.png" alt="lupa"></div>
+            </div>
+            <div class="tabs__content">о ! тут может быть контент </div>
+            <div class="tabs__content">и даже тут)</div>
+            <div class="tabs__content">и сюда даже жмякнули</div>
+            <div class="tabs__content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, dicta.</div>
+            <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
+            <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
+            <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
+            <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
+          </div>
+        </div>
+      </div>
   </main>
-  <script>
-    var tab; // заголовок вкладки
-    var tabContent; // блок содержащий контент вкладки
-
-
-    window.onload = function () {
-      tabContent = document.getElementsByClassName('tabContent');
-      tab = document.getElementsByClassName('tab');
-      hideTabsContent(1);
-    }
-
-    document.getElementById('tabs').onclick = function (event) {
-      var target = event.target;
-      if (target.className == 'tab gray') {
-        for (var i = 0; i < tab.length; i++) {
-          if (target == tab[i]) {
-            showTabsContent(i);
-            break;
-          }
-        }
-      }
-    }
-
-    function
-    hideTabsContent(a) {
-      for (var i = a; i < tabContent.length; i++) {
-        tabContent[i].classList.remove('show');
-        tabContent[i].classList.add("hide");
-        tab[i].classList.add('gray');
-        tab[i].classList.remove('whiteborder');
-      }
-    }
-
-    function showTabsContent(b) {
-      if (tabContent[b].classList.contains('hide')) {
-        hideTabsContent(0);
-        tab[b].classList.add('whiteborder');
-        tab[b].classList.remove('gray');
-        tabContent[b].classList.remove('hide');
-        tabContent[b].classList.add('show');
-      }
-    }
-  </script>
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="js/tabs.js"></script>
 </body>
 
 </html>
