--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Киевская</p>
           </div>
         </div>
-        <div class="slider-full">
+        <div class="slider-full ">
           <div class="btn-slider">
             <p><a href="#">возможен торг</a></p>
           </div>
@@ -505,6 +505,49 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="feedback">
+      <h4>Чат с продавцом</h4>
+      <div class="feedbtn">
+        <a href="#" class="f-btn-1">Записаться на просмотр</a>
+        <a href="#" class="f-btn-1">Начать торг</a>
+        <a href="#" class="f-btn-1">Запросить документы</a>
+        <a href="#" class="f-btn-1">Еще что-то</a>
+        <a href="#" class="f-btn-1">Еще что-то</a>
+        <a href="#" class="f-btn-1">Еще что-то</a>
+      </div>
+      <div class="window-chat">
+        <div class="w-p">
+          <div class="bot-photo">
+            <img src="img/bot-photo.svg" alt="bot">
+            <p class="name-bot">Недвжимость, бот</p>
+          </div>
+          <div class="text-bot">
+            <p>Здесь, с помощью быстрых сообщений, вы можете связаться с риэлтором или собственником недвижимости и
+              получить необходимую информацию.
+              <br> Чтобы начать общение выберите вариант из предложенных ниже</p>
+            <div class="time-message-bot">18:45</div>
+          </div>
+        </div>
+        <div class="w-p">
+          <div class="guest-message">
+            <p>Добрый день, меня заинтересовал вариант, но хочу рассмотреть возможность снизить цену.</p>
+            <div class="time-message-guest">18:55</div>
+          </div>
+        </div>
+        <div class="w-p">
+          <div class="realtor-photo">
+            <img src="img/photo-chat.svg" alt="realtor">
+            <p class="name-realtor">Елена Нечестная, риелтор</p>
+          </div>
+          <div class="text-realtor">
+            <p>Возможен торг до - 250 тыс.руб, так как есть похожие предложения с ценой ниже. Записать вас на просмотр?
+            </p>
+            <div class="time-message-realtor">19:05</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
