макет от 18 ноября

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div class="dim"></div>
   <header>
     <div class="header-flex-cont">
       <div class="header-flex-box"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
@@ -33,7 +34,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#">no one</a></li>
+        <li class="lol"><a href="#">no one</a></li>
         <li><a href="#">the third</a></li>
         <li><a href="#">the third</a></li>
         <li><a href="#">the third</a></li>
@@ -391,8 +392,8 @@
                 <p>Общ.транспорт: <span>нет</span></p>
                 <p>Автомобиль: <span>10 минут</span></p>
               </div>
-              <div class="more-photo"><img src="img/фото_транспорт.png" alt="park"><a href="#">Смотреть на карте</a><img
-                  src="img/больше_лупа.png" alt="lupa"></div>
+              <div class="more-photo"><img src="img/фото_транспорт.png" alt="park"><a href="#">Смотреть на
+                  карте</a><img src="img/больше_лупа.png" alt="lupa"></div>
             </div>
             <div class="tabs__content">о ! тут может быть контент </div>
             <div class="tabs__content">и даже тут)</div>
@@ -446,7 +447,8 @@
       <div class="place-box clearfix">
         <div class="op-4"></div>
         <h3>Бьютификация</h3>
-        <div class="img-box-4"><img src="img/hair 1.svg" alt="hair"><img src="img/barber-pole 1.svg" alt="barber"></div>
+        <div class="img-box-4"><img src="img/hair 1.svg" alt="hair"><img src="img/barber-pole 1.svg" alt="barber">
+        </div>
         <div class="place-info">
           <div class="tabs">
             <ul class="tabs__caption">
@@ -497,7 +499,8 @@
             <div class="tabs__content">о ! тут может быть контент </div>
             <div class="tabs__content">и даже тут)</div>
             <div class="tabs__content">и сюда даже жмякнули</div>
-            <div class="tabs__content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, dicta.</div>
+            <div class="tabs__content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, dicta.
+            </div>
             <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
             <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
             <div class="tabs__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, minus?</div>
@@ -541,7 +544,8 @@
             <p class="name-realtor">Елена Нечестная, риелтор</p>
           </div>
           <div class="text-realtor">
-            <p>Возможен торг до - 250 тыс.руб, так как есть похожие предложения с ценой ниже. Записать вас на просмотр?
+            <p>Возможен торг до - 250 тыс.руб, так как есть похожие предложения с ценой ниже. Записать вас на
+              просмотр?
             </p>
             <div class="time-message-realtor">19:05</div>
           </div>
@@ -552,6 +556,7 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/tabs.js"></script>
+  <script src="js/dark_hover.js"></script>
 </body>
 
 </html>
